<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scheduler</string>
    <string name="script_actitity_title">Scheduler</string>
    <string name="tab_tasks_title">Tasks</string>
    <string name="tab_widgets_title">Widgets</string>
    <string name="tab_schedule_title">Schedule</string>
    <string name="menu_start_service">Start service</string>
    <string name="menu_restart_service">Refresh</string>
    <string name="menu_stop_service">Stop service</string>
    <string name="task_title">Task parameters</string>
    <string name="shortcut_title">Task shortcut</string>
    <string name="widget_title">Widget</string>
    <string name="widget_pref_title">Widget params</string>
    <string name="menu_show_log">Show log</string>
    <string name="menu_clear_log">Clear log</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="action_settings">Settings</string>

    <string name="menu_enable_log">Enable logging</string>
    <string name="menu_disable_log">Disable logging</string>
    <string name="menu_execute_script">Execute</string>
    <string name="menu_enable_script">Enable</string>
    <string name="menu_disable_script">Disable</string>
    <string name="menu_edit_task">Edit</string>

    <string name="settings_group_general">General</string>
    <string name="settings_title_autostart">Auto start</string>
    <string name="settings_descr_autostart">Start-up service on device boot</string>
</resources>